--- a/client/functions/package.json
+++ b/client/functions/package.json
@@ -1,9 +1,9 @@
 {
   "name": "functions",
   "scripts": {
-    "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
     "build:watch": "tsc --watch",
+    "quickBuild": "npm run build",
     "serve": "npm run build && firebase emulators:start",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -15,17 +15,14 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^10.0.2",
-    "firebase-functions": "^4.1.0"
+    "@google-cloud/local-auth": "^2.1.0",
+    "cors": "^2.8.5",
+    "firebase-admin": "^10.2.0",
+    "firebase-functions": "^4.1.0",
+    "googleapis": "^105.0.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^0.2.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.6.4"
   },
   "private": true
 }
