--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/showdown": "^2.0.0",
+    "antd": "^5.0.3",
     "firebase": "^9.14.0",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
